--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "mocha --watch",
     "posttest": "npm run lint",
     "preversion": "npm test",
-    "version": "changes",
+    "version": "changes --commits",
     "postversion": "git push --follow-tags && npm publish"
   },
   "keywords": [
@@ -22,11 +22,11 @@
     "extends": "@studio"
   },
   "devDependencies": {
-    "@studio/changes": "^1.1.0",
-    "@studio/eslint-config": "^1.0.0",
-    "eslint": "^3.14.1",
-    "mocha": "^3.2.0",
-    "sinon": "^2.3.2"
+    "@studio/changes": "^1.5.0",
+    "@studio/eslint-config": "^1.0.2",
+    "eslint": "^4.19.1",
+    "mocha": "^5.2.0",
+    "sinon": "^6.0.0"
   },
   "repository": {
     "type": "git",
