--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "Transforms to parse and stringify ndjson",
   "scripts": {
     "lint": "eslint .",
-    "test": "mocha",
+    "test": "mocha && mochify",
     "watch": "mocha --watch",
     "posttest": "npm run lint",
     "preversion": "npm test",
     "version": "changes --commits",
     "postversion": "git push --follow-tags && npm publish"
+  },
+  "browser": {
+    "stream": "@studio/browser-stream"
   },
   "keywords": [
     "json",
@@ -21,11 +24,15 @@
   "eslintConfig": {
     "extends": "@studio"
   },
+  "dependencies": {
+    "@studio/browser-stream": "^1.0.0"
+  },
   "devDependencies": {
     "@studio/changes": "^1.5.0",
     "@studio/eslint-config": "^1.0.2",
     "eslint": "^4.19.1",
     "mocha": "^5.2.0",
+    "mochify": "^5.8.0",
     "sinon": "^6.0.0"
   },
   "repository": {
