--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "mocha --watch",
     "posttest": "npm run lint",
     "preversion": "npm test",
-    "version": "changes --commits",
+    "version": "changes --commits --footer",
     "postversion": "git push --follow-tags && npm publish"
   },
   "browser": {
@@ -28,7 +28,7 @@
     "@studio/browser-stream": "^1.0.0"
   },
   "devDependencies": {
-    "@studio/changes": "^1.5.1",
+    "@studio/changes": "^2.0.1",
     "@studio/eslint-config": "^1.0.2",
     "eslint": "^5.0.1",
     "mocha": "^5.2.0",
